Ubah service pegawai agar dapat tambah jabatan di pegawai yang sudah ada
