# model/domain/pegawai.go
@@ -1,10 +1,13 @@
 package domain
 
+import "database/sql"
+
 type Pegawai struct {
-	Id       int
-	Nama     string
-	Nip      string
-	Jabatan  string
-	KodeOpd  string
-	NamaOpd  string
+	Id          int
+	Nama        string
+	Nip         string
+	JabatanId   sql.NullInt64
+	NamaJabatan sql.NullString
+	KodeOpd     string
+	NamaOpd     string
 }
